<resources>
    <string name="app_name">My Land</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZG9waW5nIiwiYSI6ImNqcGJxZ2M1bDBkY3UzcXBobGduNGp0ZTMifQ.7MpBiXSBuWhWwkO50Lfncg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_lands">Lands</string>
    <string name="menu_options">Options</string>
    <string name="menu_exit">Exit</string>
    <string name="please_wait">Please wait…</string>
    <string name="something_happened">Something happened</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_land_edit">Edit Land</string>
    <string name="task_type">Task Type</string>
    <string name="priority">Priority</string>
    <string name="optional">(optional)</string>
    <string name="target_date">Target Date</string>
    <string name="add_task">Add Task</string>
    <string name="all">All</string>
    <string name="land">Land</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="task_types">Task Types</string>
    <string name="item_types">Item Types</string>
    <string name="task_name">Task Name</string>
    <string name="item_name">Item Name</string>
    <string name="icon">Icon</string>
    <string name="edit_icon">Edit icon</string>
    <string name="edit_color">Edit color</string>
    <string name="color">Color</string>
    <string name="remove_item">Do you wish to remove this type of item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_task">Do you wish to remove this type of task?</string>
    <string name="item_added">Item added</string>
    <string name="task_added">Task added</string>
    <string name="item_add_error">Some error happened while adding the item!</string>
    <string name="task_add_error">Some error happened while adding the task!</string>
    <string name="land_update_success">Land updated</string>
    <string name="land_update_error">Some error happened while updating the land</string>
    <string name="item_type_update_success">Item type updated</string>
    <string name="item_type_update_error">Some error happened while updating the item type</string>
    <string name="item_type_add_success">Item type added</string>
    <string name="item_type_add_error">Some error occurred while adding the item type</string>
    <string name="task_type_add_success">Task type added</string>
    <string name="task_type_add_error">Some error occurred while adding the task type</string>
    <string name="task_type_update_success">Task type updated</string>
    <string name="task_type_update_error">Some error occurred while updating the task type</string>
    <string name="leave_message">Press back again to leave</string>
    <string name="state">State</string>
    <string name="tap_edit">(Tap to edit)</string>
    <string name="name">Name</string>
    <string name="edit_land">Edit land</string>
    <string name="edit_item">Edit item</string>
    <string name="item_update_success">Item updated</string>
    <string name="item_update_error">Some error occurred while updating item</string>
    <string name="land_state">State of the land</string>
    <string name="item_state">State of the item</string>
    <string name="all_tasks">All tasks</string>
    <string name="import_db">Import DB</string>
    <string name="export_db">Export DB</string>
    <string name="image_add_error">Some error occurred while adding the image</string>
    <string name="import_success">Database imported successfully</string>
    <string name="import_error">Some error occurred while importing the database</string>
    <string name="export_success">Database exported successfully</string>
    <string name="export_error">Some error occurred while exporting the database</string>
    <string name="close_task">Close task</string>
    <string name="observations">Observations</string>
    <string name="update_task_success">Task updated</string>
    <string name="update_task_error">Some error occurred while updating the task</string>
    <string name="delete_task_success">Task deleted</string>
    <string name="delete_task_error">Some error occurred while deleting the task</string>
    <string name="button_remove">Remove land?</string>
    <string name="remove_tree">Do you wish to remove the selected item?</string>
    <string name="remove_land">Do you wish to delete this land?</string>
    <string name="item">Item</string>
    <string name="save_changes">Do you wish to save the changes?</string>
    <string name="task">Task</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="delete_task">Do you wish to delete this task?</string>
    <string name="close_task_ask">Do you wish to close this task?</string>
    <string name="task_close_success">Task closed</string>
    <string name="task_close_error">Some error occurred while closing the task</string>
    <string name="markers_visibility_error">All markers should be visible!</string>
    <string name="unit">Unit</string>
    <string name="create_profile">Create new user</string>
    <string name="insert_name">Insert a name</string>
    <string name="switch_user_message">Tap to switch user</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_user_message">Are you sure you want to delete this profile?</string>
    <string name="satellite">Satellite</string>
    <string name="satellite_roads">Satellite with roads</string>
    <string name="land_list_empty">The list of lands is empty…</string>
    <string name="menu_remove_land">Remove Land</string>
    <string name="menu_delete_item">Remove item</string>
    <string name="add_item_dialog_state_hints">In danger of falling, near road, etc…</string>
    <string name="add_land_details_title">Land details</string>
</resources>