<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.gago.david.myland.LandFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.gago.david.myland.LandFragment"
        tools:listitem="@layout/fragment_land">


    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_land_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        android:foreground="@drawable/ic_baseline_add_24"
        android:foregroundGravity="center"
        android:tint="@color/white"
        app:elevation="10dp" />

    <id.arieridwan.lib.PageLoader
        android:id="@+id/pageloader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:setErrorImage="@drawable/ic_not_found"
        app:setErrorText="@string/something_happened"
        app:setLoadingAnimationMode="flip"
        app:setLoadingImage="@drawable/laucher_icon"
        app:setLoadingText="@string/please_wait"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/land_list_empty"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/land_list_empty"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="visible" />

</FrameLayout>
