<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:pikolo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskTypeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:hint="@string/item_name"
                android:inputType="textCapWords"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="@android:dimen/notification_large_icon_width"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_cut" />

            <br.com.bloder.magic.view.MagicButton
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:button_icon="@drawable/ic_action_edit"
                app:button_icon_height="25dp"
                app:button_icon_width="25dp"
                app:expandable_area_color="@color/colorPrimaryDark"
                app:hide_text="@string/icon"
                app:hide_text_color="@color/cardview_light_background"
                app:hide_text_size="5dp"
                app:icon_button_color="@color/colorPrimary"
                app:magic_button_size="50dp" />

            <br.com.bloder.magic.view.MagicButton
                android:id="@+id/edit_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:button_icon="@drawable/ic_color_lens"
                app:button_icon_height="25dp"
                app:button_icon_width="25dp"
                app:expandable_area_color="@color/colorPrimaryDark"
                app:hide_text="@string/color"
                app:hide_text_color="@color/cardview_light_background"
                app:hide_text_size="5dp"
                app:icon_button_color="@color/colorPrimary"
                app:magic_button_size="50dp" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/background_light"
        app:elevation="10dp"
        app:srcCompat="@drawable/ic_done" />

</FrameLayout>